# daxa-renderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  README.md  compile_commands.json  test.scene  vcpkg-configuration.json  vcpkg.json
shaders/: bdrflut.glsl  composition.glsl  core.glsl  deffered.glsl  down_sample.glsl  draw.glsl  equirectangular_to_cubemap.glsl  filter_gauss.glsl  irradiance_cube.glsl  lighting.glsl  normal_shadow.glsl  prefilter_env.glsl  shadow.glsl  shared.inl  skybox_draw.glsl  ssao_blur.glsl  ssao_generation.glsl  up_sample.glsl  variance_shadow.glsl  variance_shadow_point.glsl
shaders/basic_deffered/: composition.glsl  g_buffer_gather.glsl  ssao_blur.glsl  ssao_generation.glsl
shaders/basic_forward/: draw.glsl
shaders/common/: core.glsl  lighting.glsl
shaders/utils/: core.glsl  lighting.glsl  noise.glsl  position_from_depth.glsl  shadow.glsl
src/: app.cpp  app.hpp  bloom.cpp  bloom.hpp  camera.cpp  camera.hpp  main.cpp  model.cpp  model.hpp  new_model.cpp  new_model.hpp  texture.cpp  texture.hpp  window.hpp
src/data/: UUID.cpp  UUID.hpp  components.hpp  entity.hpp  scene.cpp  scene.hpp  scene_serializer.cpp  scene_serializer.hpp
src/graphics/: buffer.hpp  camera.cpp  camera.hpp  model.cpp  model.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
src/manager/: light_manager.cpp  light_manager.hpp  model_manager.cpp  model_manager.hpp
src/panels/: scene_hiearchy.cpp  scene_hiearchy.hpp  viewport_panel.cpp  viewport_panel.hpp
src/rendering/: basic_deffered.cpp  basic_deffered.hpp  basic_forward.cpp  basic_forward.hpp  bloom_renderer.cpp  bloom_renderer.hpp  generate_ssao.cpp  generate_ssao.hpp  render_context.hpp  ssao_renderer.cpp  ssao_renderer.hpp  task.cpp  task.hpp
src/systems/: ibl_renderer.cpp  ibl_renderer.hpp  light_system.cpp  light_system.hpp  physics.cpp  physics.hpp  rendering_system.cpp  rendering_system.hpp
src/utils/: threadpool.hpp  utils.cpp  utils.hpp
